--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 <div class="container">
   <h1>Discover artworks</h1>
   <div class="switcher">
@@ -18,3 +20,4 @@
     <a href="" class="pagination-button">Reload</a>
   </div>
 </div>
+{{end}}
