--- a/assets/views/error.jet.html
+++ b/assets/views/error.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 <div class="container error">
     <h1>An error occured</h1>
     <p>This is what you got instead ¯\_(ツ)_/¯</p>
@@ -8,3 +10,4 @@
         us by submitting an issue to the <a href="https://codeberg.org/VnPower/PixivFE/issues/new">upstream repository</a>!
     </p>
 </div>
+{{end}}
