--- a/assets/views/index.jet.html
+++ b/assets/views/index.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 
 <div class="container">
 {{ if isset(NoTokenData) }}
@@ -39,3 +41,4 @@
 
 {{ end }}
 </div>
+{{end}}
