--- a/assets/views/temp.jet.html
+++ b/assets/views/temp.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 
   {{ if Token }}
   <div class="switcher">
@@ -162,3 +164,4 @@
   <br /> *}
 
   {{ end }}
+{{end}}
