--- a/assets/views/userAtom.jet.html
+++ b/assets/views/userAtom.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 <?xml version="1.0" encoding="utf-8"?>{* <?xml-stylesheet href="/feed.xsl" type="text/xsl"?> *}
 <feed xmlns="http://www.w3.org/2005/Atom">
   <id>{{ BaseURL }}/users/{{ User.ID }}/{{ Category }}</id>
@@ -40,4 +42,4 @@
     </content>
   </entry>
   {{ end }}
-</feed>
+</feed>{{end}}
