--- a/assets/views/pixivision.jet.html
+++ b/assets/views/pixivision.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 <div class="container">
 	<div class="vision-container">
 		{{ range _, article := Data }}
@@ -24,3 +26,4 @@
 		{{ end }}
 	</div>
 </div>
+{{end}}
