--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 <div class="container" data-hx-boost="false">
   <h1>Settings</h1>
   <p>
@@ -185,3 +187,4 @@
     <input class="critical" type="submit" value="Reset all cookies/preferences" />
   </form>
 </div>
+{{end}}
