--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -1,3 +1,5 @@
+{{extends "layout/default.jet"}}
+{{block body()}}
 {{ import "components/switcher" }}
 
 <div class="container">
@@ -116,3 +118,4 @@
     {{ raw: createPaginator(url, "#checkpoint", Page, -1) }}
   </div>
 </div>
+{{end}}
