--- a/assets/views/index.jet.html
+++ b/assets/views/index.jet.html
@@ -1,15 +1,15 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 
 <div class="container">
-{{ if isset(NoTokenData) }}
+{{ if !.LoggedIn }}
   <p>Not logged in. You can login <a href="/settings">here</a>.</p>
   <div class="component-header">
     <h2>Today's illustration rankings</h2>
     <a href="/ranking?content=all">See more</a>
   </div>
   <div class="artwork-container-scroll">
-    {{ include "components/ranking-tn" NoTokenData.Contents }}
+    {{ include "components/ranking-tn" .NoTokenData.Contents }}
   </div>
 
 {{ else }}
@@ -23,15 +23,15 @@
     <a href="/self/followingWorks">See more</a>
   </div>
   <div class="artwork-container-scroll">
-    {{ include "components/small-tn" Data.Following }}
+    {{ include "components/small-tn" .Data.Following }}
   </div>
   <br />
   <h2>Recommended works</h2>
   <div class="artwork-container">
-    {{ include "components/small-tn" Data.Recommended }}
+    {{ include "components/small-tn" .Data.Recommended }}
   </div>
   <br />
-  {{ range Data.RecommendByTags }}
+  {{ range .Data.RecommendByTags }}
   <h2>Recommended illustrations tagged <a href="/tags/{{.Name}}">#{{.Name}}</a></h2>
   <div class="artwork-container">
     {{ include "components/small-tn" .Artworks }}
