--- a/assets/views/pixivision_article.jet.html
+++ b/assets/views/pixivision_article.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <div class="container illust">
 	<h2>{{Article.Title}}</h2>
