--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <div class="container">
     <h1>Ranking calendar ({{ ThisMonth.MonthLiteral }} {{ Year }})</h1>
