--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <div class="container" data-hx-boost="false">
   <h1>Settings</h1>
