--- a/assets/views/userAtom.jet.html
+++ b/assets/views/userAtom.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <?xml version="1.0" encoding="utf-8"?>{* <?xml-stylesheet href="/feed.xsl" type="text/xsl"?> *}
 <feed xmlns="http://www.w3.org/2005/Atom">
