--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <div class="container illust" id="checkpoint">
   {{ include "components/artwork" .Illust }}
