--- a/assets/views/error.jet.html
+++ b/assets/views/error.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <div class="container error">
     <h1>An error occured</h1>
