--- a/assets/views/newest.jet.html
+++ b/assets/views/newest.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <div class="container">
   <h1>Newest works from all users</h1>
