--- a/assets/views/pixivision.jet.html
+++ b/assets/views/pixivision.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 <div class="container">
 	<div class="vision-container">
