--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -1,4 +1,4 @@
-{{extends "layout/default.jet"}}
+{{extends "layout/default.jet.html"}}
 {{block body()}}
 {{ if ! User.BackgroundImage }}
 <div class="background-cover"></div>
