--- a/assets/views/following.jet.html
+++ b/assets/views/following.jet.html
@@ -1,5 +1,5 @@
-{{extends "layout/default.jet.html"}}
-{{block body()}}
+{{ extends "layout/default" }}
+{{ block body() }}
 <div class="container">
   <h1>Newest works from people you follow</h1>
   <div class="switcher">
@@ -8,12 +8,12 @@
     <a href="/following_works?mode=safe&page=1" class="switch-button">Safe</a>
     <a href="/following_works?mode=r18&page=1" class="switch-button">R-18</a>
   </div>
-  <div class="artwork-container">{{ include "components/small-tn" Artworks }}</div>
+  <div class="artwork-container">{{ include "components/small-tn" .Artworks }}</div>
   <div class="pagination">
-    {{ url := "/self/following_works" + "?mode=" + Mode + "&page=" }}
-    <small>Page {{ CurPage }}</small>
+    {{ url := "/self/following_works" + "?mode=" + .Mode + "&page=" }}
+    <small>Page {{ .CurPage }}</small>
     <br />
-    {{ raw: createPaginator(url, "#checkpoint", Page, -1) }}
+    {{ raw: createPaginator(url, "#checkpoint", .Page, -1) }}
   </div>
 </div>
-{{end}}
+{{ end }}
