--- a/assets/views/index.jet.html
+++ b/assets/views/index.jet.html
@@ -1,5 +1,5 @@
-{{extends "layout/default.jet.html"}}
-{{block body()}}
+{{ extends "layout/default" }}
+{{ block body() }}
 
 <div class="container">
 {{ if !.LoggedIn }}
@@ -41,4 +41,4 @@
 
 {{ end }}
 </div>
-{{end}}
+{{ end }}
