--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -1,28 +1,28 @@
-{{extends "layout/default.jet.html"}}
-{{block body()}}
+{{ extends "layout/default" }}
 {{ import "components/switcher" }}
+{{ block body() }}
 
 <div class="container">
   <div class="tag-header">
-    {{ if Tag.Metadata.ID }}
-    <a href="/artworks/{{ Tag.Metadata.ID }}">
-      <img class="tag-thumbnail" src="{{ Tag.Metadata.Image }}" alt="{{ Tag.Name }}" />
+    {{ if .Tag.Metadata.ID }}
+    <a href="/artworks/{{ .Tag.Metadata.ID }}">
+      <img class="tag-thumbnail" src="{{ .Tag.Metadata.Image }}" alt="{{ .Tag.Name }}" />
     </a>
     {{ end }}
 
     <div class="tag-details">
-      <b class="main-tag">#{{ Tag.Name }}</b>
-      <span class="translated-tag">{{ Tag.Metadata.Name }}</span>
+      <b class="main-tag">#{{ .Tag.Name }}</b>
+      <span class="translated-tag">{{ .Tag.Metadata.Name }}</span>
       <br />
       <br />
-      <span><b>{{ Data.Artworks.Total }}</b> works</span>
+      <span><b>{{ .Data.Artworks.Total }}</b> works</span>
 
-      <p class="tag-description">{{ Tag.Metadata.Detail }}</p>
+      <p class="tag-description">{{ .Tag.Metadata.Detail }}</p>
     </div>
   </div>
 
   <div class="artwork-container-scroll">
-    {{ range Data.RelatedTags }}
+    {{ range .Data.RelatedTags }}
     <a href="/tags/{{ . }}">
       <div class="tag-container">
         <div class="main">#{{ . }}</div>
@@ -30,42 +30,42 @@
     </a>
     {{ end }}
   </div>
-  {{ Category := isset(Queries.category) ? Queries.category : "artworks" }}
-  {{ Order := isset(Queries.order) ? Queries.order : "date_d" }}
-  {{ Mode := isset(Queries.mode) ? Queries.mode : "safe" }}
-  {{ Ratio := isset(Queries.ratio) ? Queries.ratio : "" }}
-  {{ SearchMode := isset(Queries.smode) ? Queries.smode : "" }}
+  {{ Category := isset(.Queries.category) ? .Queries.category : "artworks" }}
+  {{ Order := isset(.Queries.order) ? .Queries.order : "date_d" }}
+  {{ Mode := isset(.Queries.mode) ? .Queries.mode : "safe" }}
+  {{ Ratio := isset(.Queries.ratio) ? .Queries.ratio : "" }}
+  {{ SearchMode := isset(.Queries.smode) ? .Queries.smode : "" }}
   <div class="switcher">
     <div class="switch-title">Category</div>
-    {{ URL := unfinishedQuery(QueriesC, "category") }}
+    {{ URL := unfinishedQuery(.QueriesC, "category") }}
     {{ path := slice("artworks", "illustrations", "manga")}}
     {{ name := slice("Artworks", "Illustrations", "Manga")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Category) }}
   </div>
   <div class="switcher">
     <div class="switch-title">Order</div>
-    {{ URL := unfinishedQuery(QueriesC, "order") }}
+    {{ URL := unfinishedQuery(.QueriesC, "order") }}
     {{ path := slice("date_d", "date")}}
     {{ name := slice("Newest", "Oldest")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Order) }}
   </div>
   <div class="switcher">
     <div class="switch-title">Filter</div>
-    {{ URL := unfinishedQuery(QueriesC, "mode") }}
+    {{ URL := unfinishedQuery(.QueriesC, "mode") }}
     {{ path := slice("all", "safe", "r18")}}
     {{ name := slice("All", "Safe", "R-18")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Mode) }}
   </div>
   <div class="switcher">
     <div class="switch-title">Ratio</div>
-    {{ URL := unfinishedQuery(QueriesC, "ratio") }}
+    {{ URL := unfinishedQuery(.QueriesC, "ratio") }}
     {{ path := slice("", "-0.5", "0", "0.5")}}
     {{ name := slice("All", "Portrait", "Square", "Landscape")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=Ratio) }}
   </div>
   <div class="switcher">
     <div class="switch-title">Search mode</div>
-    {{ URL := unfinishedQuery(QueriesC, "smode") }}
+    {{ URL := unfinishedQuery(.QueriesC, "smode") }}
     {{ path := slice("", "s_tag_full", "s_tag", "s_tc")}}
     {{ name := slice("None", "Exact (tags)", "Partial (tags)", "Title/Caption")}}
     {{ yield Switcher(baseURL=URL, paths=path, names=name, currentPath=SearchMode) }}
@@ -74,48 +74,48 @@
     <summary>
       <h2>Advanced settings</h2>
     </summary>
-    {{ URL := unfinishedQuery(QueriesC, "") }}
-    <form action="{{ URL }}&name={{ QueriesC.Query.Name }}" method="post">
+    {{ URL := unfinishedQuery(.QueriesC, "") }}
+    <form action="{{ URL }}&name={{ .QueriesC.Query["Name"] }}" method="post">
       <label for="wlt">Minimum image width</label>
-      <input type="text" name="wlt" value="{{ QueriesC.Query.Wlt }}" />
+      <input type="text" name="wlt" value="{{ .QueriesC.Query["Wlt"] }}" />
       <label for="wgt">Maximum image width</label>
-      <input type="text" name="wgt" value="{{ QueriesC.Query.Wgt }}" />
+      <input type="text" name="wgt" value="{{ .QueriesC.Query["Wgt"] }}" />
       <label for="hlt">Minimum image height</label>
-      <input type="text" name="hlt" value="{{ QueriesC.Query.Hlt }}" />
+      <input type="text" name="hlt" value="{{ .QueriesC.Query["Hlt"] }}" />
       <label for="hgt">Maximum image height</label>
-      <input type="text" name="hgt" value="{{ QueriesC.Query.Hgt }}" />
+      <input type="text" name="hgt" value="{{ .QueriesC.Query["Hgt"] }}" />
       <label for="scd">Posted after (format: yyyy-mm-dd)</label>
-      <input type="text" name="scd" value="{{ QueriesC.Query.Scd }}" />
+      <input type="text" name="scd" value="{{ .QueriesC.Query["Scd"] }}" />
       <label for="ecd">Posted before (format: yyyy-mm-dd)</label>
-      <input type="text" name="ecd" value="{{ QueriesC.Query.Ecd }}" />
+      <input type="text" name="ecd" value="{{ .QueriesC.Query["Ecd"] }}" />
       <label for="tool">Tool</label>
-      <input type="text" name="tool" value="{{ QueriesC.Query.Tool }}" />
+      <input type="text" name="tool" value="{{ .QueriesC.Query["Tool"] }}" />
       <input type="submit" value="Set" />
     </form>
   </details>
-  {{ if Data.Popular.Recent }}
+  {{ if .Data.Popular.Recent }}
   <h2>Popular artworks</h2>
   <h3>Recent</h3>
   <div class="artwork-container-scroll">
-    {{ include "components/small-tn" Data.Popular.Recent }}
+    {{ include "components/small-tn" .Data.Popular.Recent }}
   </div>
   <h3>All Time</h3>
   <div class="artwork-container-scroll">
-    {{ include "components/small-tn" Data.Popular.Permanent }}
+    {{ include "components/small-tn" .Data.Popular.Permanent }}
   </div>
   {{ end }}
   {* Switchers here *}
   <br />
   <h2>Works</h2>
   <div class="artwork-container">
-    {{ include "components/small-tn" Data.Artworks.Artworks }}
+    {{ include "components/small-tn" .Data.Artworks.Artworks }}
   </div>
 
   <div class="pagination">
-    {{ url := unfinishedQuery(QueriesC, "page") }}
-    <small>Page {{ Page }}</small>
+    {{ url := unfinishedQuery(.QueriesC, "page") }}
+    <small>Page {{ .Page }}</small>
     <br />
-    {{ raw: createPaginator(url, "#checkpoint", Page, -1) }}
+    {{ raw: createPaginator(url, "#checkpoint", .Page, -1) }}
   </div>
 </div>
-{{end}}
+{{ end }}
