--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -1,27 +1,27 @@
-{{extends "layout/default.jet.html"}}
-{{block body()}}
-{{ if ! User.BackgroundImage }}
+{{ extends "layout/default" }}
+{{ block body() }}
+{{ if ! .User.BackgroundImage }}
 <div class="background-cover"></div>
 {{ else }}
 <div class="background-cover" id="hasbg">
-  <img src="{{ User.BackgroundImage }}" alt="{{ User.Name }}" />
+  <img src="{{ .User.BackgroundImage }}" alt="{{ .User.Name }}" />
 </div>
 {{ end }}
 <div class="container user">
   <div class="user-avatar">
-    <img src="{{User.Avatar}}" alt="Avatar Of User">
+    <img src="{{.User.Avatar}}" alt="Avatar Of User">
   </div>
   <div class="user-details">
-    <h1>{{ User.Name }}</h1>
+    <h1>{{ .User.Name }}</h1>
     <div>
-      <a href="https://pixiv.net/u/{{ User.ID }}">pixiv.net/u/{{ User.ID }}</a>
+      <a href="https://pixiv.net/u/{{ .User.ID }}">pixiv.net/u/{{ .User.ID }}</a>
       <br />
     </div>
-    <small> {{ User.Following }} Following | {{ User.MyPixiv }} MyPixiv </small>
+    <small> {{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv </small>
     <div class="user-social">
-      {{ if User.Webpage }}
-      <span><a href="{{ User.Webpage }}"><img src="/img/globe.png" alt="Webpage" /></a></span>
-      {{ end }} {{ range index, item := User.Social }}
+      {{ if .User.Webpage }}
+      <span><a href="{{ .User.Webpage }}"><img src="/img/globe.png" alt="Webpage" /></a></span>
+      {{ end }} {{ range index, item := .User.Social }}
       <span>
         <a href="{{ item.url }}">
           <img src="/img/{{ index }}.svg" alt="{{ index }}" />
@@ -29,11 +29,11 @@
       </span>
       {{ end }}
     </div>
-    <p>{{ raw: parsePixivRedirect(User.Comment) }}</p>
+    <p>{{ raw: parsePixivRedirect(.User.Comment) }}</p>
   </div>
   <div>Frequently Used Tags</div>
   <div class="tag-list">
-    {{ range User.FrequentTags }}
+    {{ range .User.FrequentTags }}
     <a href="/tags/{{ .Name }}">
       #{{ .Name }}
       {* <div>
@@ -49,21 +49,21 @@
   </div>
   <div class="switcher">
     <div class="switch-title">Category</div>
-    <a href="/users/{{ User.ID }}/#checkpoint" class="switch-button">All</a>
-    <a href="/users/{{ User.ID }}/illustrations#checkpoint" class="switch-button">Illustrations</a>
-    <a href="/users/{{ User.ID }}/manga#checkpoint" class="switch-button">Mangas</a>
-    <a href="/users/{{ User.ID }}/novels#checkpoint" class="switch-button">Novels</a>
-    <a href="/users/{{ User.ID }}/bookmarks#checkpoint" class="switch-button">Bookmarks</a>
+    <a href="/users/{{ .User.ID }}/#checkpoint" class="switch-button">All</a>
+    <a href="/users/{{ .User.ID }}/illustrations#checkpoint" class="switch-button">Illustrations</a>
+    <a href="/users/{{ .User.ID }}/manga#checkpoint" class="switch-button">Mangas</a>
+    <a href="/users/{{ .User.ID }}/novels#checkpoint" class="switch-button">Novels</a>
+    <a href="/users/{{ .User.ID }}/bookmarks#checkpoint" class="switch-button">Bookmarks</a>
   </div>
   <div>
-    {{ if Category != "novels" }}
+    {{ if .Category != "novels" }}
     <div class="artwork-container-header">
       <h2 id="checkpoint">Illustrations and Mangas</h2>
-      {{ combinedUrl := "/artworks-multi/" + joinArtworkIds(User.Artworks) }}
+      {{ combinedUrl := "/artworks-multi/" + joinArtworkIds(.User.Artworks) }}
       <div class="artwork-actions"><a href="{{combinedUrl}}">View all art on this page</a></div>
     </div>
     <div class="artwork-container">
-      {{ include "components/small-tn" User.Artworks }}
+      {{ include "components/small-tn" .User.Artworks }}
     </div>
     {{ else }}
 
@@ -71,17 +71,17 @@
       <h2 id="checkpoint">Novels</h2>
     </div>
     <div class="novel-container">
-      {{ range User.Novels }}
+      {{ range .User.Novels }}
       {{ include "components/novel-tn" . }}
       {{ end }}
     </div>
     {{ end }}
   </div>
   <div class="pagination">
-    {{ url := "/users/" + User.ID + "/" + Category + "?page="}}
-    <small>Page {{ Page }}/{{ PageLimit }}</small>
+    {{ url := "/users/" + .User.ID + "/" + .Category + "?page="}}
+    <small>Page {{ .Page }}/{{ .PageLimit }}</small>
     <br />
-    {{ raw: createPaginator(url, "#checkpoint", Page, PageLimit) }}
+    {{ raw: createPaginator(url, "#checkpoint", .Page, .PageLimit) }}
   </div>
 </div>
-{{end}}
+{{ end }}
