replace ?r=/redirect_to with something else.
      can't shake the fakey feeling. net/http expects one handler max. the way we currently detect redirect param is not one handler.
      we should refactor the code out to be called from different handlers
      also, wtf is /settings/novelFontType?noredirect=t&r=  (redirect or no redirect?)
      suggestion: Use Referer. the header exists for a reason. might need to turn off CSP for that.

--- a/assets/views/components/artwork.jet.html
+++ b/assets/views/components/artwork.jet.html
@@ -36,11 +36,11 @@
   </div>
   <div class="artwork-actions">
     {{ if isset(.BookmarkData) && LoggedIn }}
-    <a href="/self/deleteBookmark/{{ .BookmarkID }}?r={{ OriginalURL }}">
+    <a href="/self/deleteBookmark/{{ .BookmarkID }}">
       <img src="/img/heart-red.png" alt="Bookmarked" />
     </a>
     {{ else }}
-    <a href="/self/addBookmark/{{ .ID }}?r={{ OriginalURL }}">
+    <a href="/self/addBookmark/{{ .ID }}">
       <img src="/img/heart-outline.png" alt="Bookmark" />
     </a>
     {{ end }}
@@ -49,7 +49,7 @@
     <img src="/img/like-blue.png" alt="Liked" />
 
     {{ else }}
-    <a href="/self/like/{{ .ID }}?r={{ OriginalURL }}">
+    <a href="/self/like/{{ .ID }}">
       <img src="/img/like-outline.png" alt="Like" />
     </a>
     {{ end }}
