update pixivfe.pages.dev to pixivfe-docs.pages.dev

--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -21,7 +21,7 @@
       <p>
         Log in with your Pixiv account's cookie to access features above.
         To learn how to obtain your cookie, please see
-        <a href="https://pixivfe.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
+        <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
       </p>
       <p>
         Cookies will be saved on your browser, and will expire after a fixed period of time.
